--- a/chat-board-webui/src/components/MessageListItem/MessageListItem.css
+++ b/chat-board-webui/src/components/MessageListItem/MessageListItem.css
@@ -1,3 +1,9 @@
+.chat-item{
+    margin: 5px 0 5px 0;
+    padding: 5px;
+}
 .my-message{
-    border: solid 1px red;
+    border: solid 2px #D5DBDF;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
 }
